fix: No extra margin in lists

--- a/static/style.css
+++ b/static/style.css
@@ -162,10 +162,6 @@ ul {
     padding-left: 1.5rem;
 }
 
-li {
-    margin-bottom: 0.5rem;
-}
-
 textarea {
     width: 100%;
     max-width: 100%;
